<resources>
	<string name="app_name">TMHeart</string>
	<string name="subscription_activity_tvchooseplan_two_button_text">Choose Plan &gt;</string>
	<string name="subscription_activity_lblvalidmonth_text_view_text">month\nvalidity</string>
	<string name="subscription_activity_lblvalidmonth_three_text_view_text">month\nvalidity</string>
	<string name="subscription_activity_lblitemname_text_view_hint">Heart beat alarm</string>
	<string name="subscription_activity_lblvalidmonth_text_view_hint">month\nvalidity</string>
	<string name="subscription_activity_tvchooseplan_button_text">Choose Plan &gt;</string>
	<string name="subscription_activity_lblvalidmonth_two_text_view_text">month\nvalidity</string>
	<string name="subscription_activity_tvchooseplane_button_text">Choose Plan &gt;</string>
	<string name="subscription_activity_tvchooseplane_button_hint">Choose Plan &gt;</string>
	<string name="subscription_activity_lblvalidyearvalue_text_view_hint">1</string>
	<string name="subscription_activity_lblvalidmonthvalue_two_text_view_hint">3</string>
	<string name="subscription_activity_lblplanamount_text_view_text">Rs 999 /-</string>
	<string name="subscription_activity_lblitemname_two_text_view_text">Heart beat analysis</string>
	<string name="subscription_activity_lblvalidmonthvalue_text_view_text">1</string>
	<string name="subscription_activity_lblvalidyear_text_view_hint">year\nvalidity</string>
	<string name="subscription_activity_lblitemname_five_text_view_hint">Heart beat alarm</string>
	<string name="subscription_activity_lblitemname_three_text_view_hint">Heart beat alarm</string>
	<string name="subscription_activity_lblvalidyear_text_view_text">year\nvalidity</string>
	<string name="subscription_activity_lblitemname_five_text_view_text">Heart beat alarm</string>
	<string name="subscription_activity_lblvalidmonthvalue_text_view_hint">1</string>
	<string name="subscription_activity_lblsignup_text_view_hint">Choose your plan</string>
	<string name="subscription_activity_tvchooseplan_three_button_hint">Choose Plan &gt;</string>
	<string name="subscription_activity_lblvalidmonth_three_text_view_hint">month\nvalidity</string>
	<string name="subscription_activity_lblitemname_three_text_view_text">Heart beat alarm</string>
	<string name="subscription_activity_lblitemname_seven_text_view_text">Heart beat alarm</string>
	<string name="subscription_activity_lblplanamount_four_text_view_hint">Rs 9999 /-</string>
	<string name="subscription_activity_lblitemname_eight_text_view_hint">Heart beat analysis</string>
	<string name="subscription_activity_lblitemname_text_view_text">Heart beat alarm</string>
	<string name="subscription_activity_signupbtn_button_text">Back</string>
	<string name="subscription_activity_lblvalidyearvalue_text_view_text">1</string>
	<string name="subscription_activity_lblvalidmonthvalue_three_text_view_text">6</string>
	<string name="subscription_activity_lblitemname_six_text_view_text">Heart beat analysis</string>
	<string name="subscription_activity_lblitemname_seven_text_view_hint">Heart beat alarm</string>
	<string name="subscription_activity_lblitemname_four_text_view_text">Heart beat analysis</string>
	<string name="subscription_activity_tvchooseplan_two_button_hint">Choose Plan &gt;</string>
	<string name="subscription_activity_lblvalidmonthvalue_three_text_view_hint">6</string>
	<string name="subscription_activity_lblitemname_eight_text_view_text">Heart beat analysis</string>
	<string name="subscription_activity_lblitemname_two_text_view_hint">Heart beat analysis</string>
	<string name="subscription_activity_lblitemname_four_text_view_hint">Heart beat analysis</string>
	<string name="subscription_activity_lblplanamount_two_text_view_hint">Rs 2499 /-</string>
	<string name="subscription_activity_tvchooseplan_button_hint">Choose Plan &gt;</string>
	<string name="subscription_activity_lblplanamount_three_text_view_text">Rs 3999 /-</string>
	<string name="subscription_activity_lblsignup_text_view_text">Choose your plan</string>
	<string name="subscription_activity_lblitemname_six_text_view_hint">Heart beat analysis</string>
	<string name="subscription_activity_lblplanamount_text_view_hint">Rs 999 /-</string>
	<string name="subscription_activity_lblplanamount_two_text_view_text">Rs 2499 /-</string>
	<string name="subscription_activity_lblvalidmonthvalue_two_text_view_text">3</string>
	<string name="subscription_activity_lblvalidmonth_two_text_view_hint">month\nvalidity</string>
	<string name="subscription_activity_lblplanamount_three_text_view_hint">Rs 3999 /-</string>
	<string name="subscription_activity_lblplanamount_four_text_view_text">Rs 9999 /-</string>
	<string name="subscription_activity_lblapptitle_text_view_text">TM Heart</string>
	<string name="subscription_activity_lblapptitle_text_view_hint">TM Heart</string>
	<string name="subscription_activity_signupbtn_button_hint">Back</string>
	<string name="subscription_activity_tvchooseplan_three_button_text">Choose Plan &gt;</string>
	<string name="payment_activity_lblpayment_text_view_hint">Pay now to subscribe</string>
	<string name="payment_activity_lblpayment_text_view_text">Pay now to subscribe</string>
	<string name="payment_activity_backbtn_button_text">Done</string>
	<string name="payment_activity_lblapptitle_text_view_text">TM Heart</string>
	<string name="payment_activity_backbtn_two_button_text">Back</string>
	<string name="payment_activity_lblapptitle_text_view_hint">TM Heart</string>
	<string name="payment_activity_backbtn_two_button_hint">Back</string>
	<string name="payment_activity_backbtn_button_hint">Done</string>
	<string name="sign_up_activity_lblapptitle_text_view_text">TM Heart</string>
	<string name="sign_up_activity_lblmobile_text_view_text">Enter mobile</string>
	<string name="sign_up_activity_lblpassword_text_view_text">Enter password</string>
	<string name="sign_up_activity_lblmobile_text_view_hint">Enter mobile</string>
	<string name="sign_up_activity_lblpassword_text_view_hint">Enter password</string>
	<string name="sign_up_activity_lblrefcode_text_view_hint">Enter reference code</string>
	<string name="sign_up_activity_lblemail_text_view_text">Enter email</string>
	<string name="sign_up_activity_lblname_text_view_text">Enter name</string>
	<string name="sign_up_activity_tvpassword_edit_text_hint">enter password</string>
	<string name="sign_up_activity_signupbtn_button_text">Sign Up</string>
	<string name="sign_up_activity_signupbtn_button_hint">Sign Up</string>
	<string name="sign_up_activity_tvmobile_edit_text_hint">enter mobile</string>
	<string name="sign_up_activity_tvrefcode_edit_text_hint">enter reference code</string>
	<string name="sign_up_activity_lblemail_text_view_hint">Enter email</string>
	<string name="sign_up_activity_lblsignup_text_view_hint">Sign Up</string>
	<string name="sign_up_activity_tvname_edit_text_hint">enter name</string>
	<string name="sign_up_activity_lblsignup_text_view_text">Sign Up</string>
	<string name="sign_up_activity_lbllogin_button_text">Already have account? Sign In</string>
	<string name="sign_up_activity_lblname_text_view_hint">Enter name</string>
	<string name="sign_up_activity_lbllogin_button_hint">Already have account? Sign In</string>
	<string name="sign_up_activity_tvemail_edit_text_hint">enter email</string>
	<string name="sign_up_activity_lblapptitle_text_view_hint">TM Heart</string>
	<string name="sign_up_activity_lblrefcode_text_view_text">Enter reference code</string>
	<string name="profile_activity_lbltargetmessage_text_view_hint">You are close to the target goal</string>
	<string name="profile_activity_tveditprofile_button_hint">Edit Profile &gt;</string>
	<string name="profile_activity_lblheartvalue_text_view_hint">72</string>
	<string name="profile_activity_lblavgheartrate_text_view_text">Lows</string>
	<string name="profile_activity_lblavgweight_text_view_text">Status</string>
	<string name="profile_activity_lblweightvalue_text_view_hint">72</string>
	<string name="profile_activity_lblidealheartrate_text_view_text">MaxRate</string>
	<string name="profile_activity_goalbtn_button_sheet_item_4_text">Warm up &amp; maintain</string>
	<string name="profile_activity_tvgoalstatus_two_text_view_text">Goal Status</string>
	<string name="profile_activity_goalbtn_button_sheet_item_5_text">General circulation</string>
	<string name="profile_activity_lblavgheartratevalue_text_view_text">90</string>
	<string name="profile_activity_lblcurrentweightvalu_text_view_hint">78</string>
	<string name="profile_activity_lblprofile_text_view_text">My Status</string>
	<string name="profile_activity_lblidealweight_text_view_text">IdealWt</string>
	<string name="profile_activity_goalbtn_button_hint">Pick a goal</string>
	<string name="profile_activity_lblcurrentheartratev_text_view_hint">72</string>
	<string name="profile_activity_lblidealweight_text_view_hint">Ideal</string>
	<string name="profile_activity_goalbtn_button_sheet_item_2_text">Increase endurance &amp; inches</string>
	<string name="profile_activity_lblweightvalue_text_view_text">72</string>
	<string name="profile_activity_lblheight_text_view_hint">Height (cm)</string>
	<string name="profile_activity_lblweight_text_view_text">Weight (Kg)</string>
	<string name="profile_activity_lblavgheartratevalue_text_view_hint">90</string>
	<string name="profile_activity_lblidealweightvalue_text_view_text">73</string>
	<string name="profile_activity_lblcurrentweightvalu_text_view_text">78</string>
	<string name="profile_activity_lblapptitle_text_view_text">TM Heart</string>
	<string name="profile_activity_lblidealheartrate_text_view_hint">Ideal</string>
	<string name="profile_activity_lblheight_text_view_text">Height (Cm)</string>
	<string name="profile_activity_lblapptitle_text_view_hint">TM Heart</string>
	<string name="profile_activity_lblavgweightvalue_text_view_hint">75</string>
	<string name="profile_activity_goalbtn_button_text">Pick a goal</string>
	<string name="profile_activity_lblalarmraised_text_view_hint">Alarm raised 10 times: You have accomplished your goal</string>
	<string name="profile_activity_tvgoalstatus_text_view_hint">Goal Status</string>
	<string name="profile_activity_lblagevalue_text_view_text">30</string>
	<string name="profile_activity_tvgoalstatus_text_view_text">Goal Status</string>
	<string name="profile_activity_lblheartvalue_text_view_text">72</string>
	<string name="profile_activity_lblheightvalue_text_view_hint">177</string>
	<string name="profile_activity_goalbtn_button_sheet_title">TM Heart Goals</string>
	<string name="profile_activity_lblcurrentweight_text_view_hint">Current</string>
	<string name="profile_activity_lblalarmraised_text_view_text">Alarm raised 10 times: You have accomplished your goal</string>
	<string name="profile_activity_tvgoalstatus_two_text_view_hint">Goal Status</string>
	<string name="profile_activity_lblweight_text_view_hint">Weight (kg)</string>
	<string name="goal_activity_lblminsvalue_text_view_text">00</string>
	<string name="goal_activity_lblcolon2_text_view_text">:</string>
	<string name="goal_activity_lblhoursvalue_text_view_text">00</string>
	<string name="goal_activity_lblstartactivity_two_text_view_text">Cancel</string>
	<string name="goal_activity_lblcolon1_text_view_text">:</string>
	<string name="goal_activity_lblsecondsvalue_text_view_text">00</string>
	<string name="goal_activity_lbldurationtarget_text_view_text">Duration Target</string>
	<string name="goal_activity_lblapptitle_text_view_text">TM Heart</string>
	<string name="goal_activity_reducetimebtn_text_view_text">-</string>
	<string name="goal_activity_lblhours_two_text_view_text">Seconds</string>
	<string name="goal_activity_lblhours_text_view_text">Hours</string>
	<string name="goal_activity_addtimebtn_text_view_text">+</string>
	<string name="goal_activity_lblstartactivity_text_view_text">Start Activity</string>
	<string name="goal_activity_lblminutes_text_view_text">Minutes</string>
</resources>